--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Borsa Falı</title>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600&family=Inter&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/ico" href="https://raw.githubusercontent.com/KemalYetkin/Webpages/main/images/crystalball.ico">
   <style>
 .support-button {
   text-align: center;
