--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="robots" content="index, follow">
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Borsa Falı",
+    "url": "https://www.borsafali.com",
+    "logo": "https://www.borsafali.com/images/google-logo.png"
+  }
+  </script>
+
   <title>Borsa Falı</title>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600&family=Inter&display=swap" rel="stylesheet">
   <link rel="icon" type="image/ico" href="https://raw.githubusercontent.com/KemalYetkin/Webpages/main/images/crystalball.ico">
