--- a/index.html
+++ b/index.html
@@ -148,7 +148,9 @@
       box-shadow: 0 0 20px rgba(214, 179, 0, 0.3);
       transition: background 0.3s, transform 0.3s;
     }
-
+	.cta img:hover {
+  	  transform: scale(1.05);
+	}
     .cta a:hover {
       background: linear-gradient(145deg, #ffe761, #fff0aa);
       transform: scale(1.05);
@@ -205,9 +207,13 @@
     </div>
   </section>
 
-  <div class="cta">
-    <a href="https://play.google.com/store/apps/details?id=com.kemalyetkin.borsafali">📲 Uygulamayı İndir</a>
-  </div>
+<div class="cta">
+  <a href="https://play.google.com/store/apps/details?id=com.kemalyetkin.borsafali" target="_blank">
+    <img src="https://raw.githubusercontent.com/KemalYetkin/Webpages/main/images/android.png" alt="Uygulamayı İndir" style="width:200px; max-width:80%; border-radius:20px; box-shadow:0 0 20px rgba(255,255,255,0.2); transition: transform 0.3s ease;" />
+  </a>
+</div>
+
+
 
   <footer>
     <p>Geliştirici: S.E · İletişim: <a href="mailto:info@borsafali.com">info@borsafali.com</a></p>
