--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
   <footer>
     <p>Geliştirici: S.E · İletişim: <a href="mailto:info@borsafali.com">info@borsafali.com</a></p>
     <p>Bu uygulama, küçük yatırımcıya büyük resmi sunmak için geliştirildi.</p>
+    <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="kemalyetkin" data-color="#FFDD00" data-emoji=""  data-font="Cookie" data-text="Buy me a coffee" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script>
   </footer>
 
 
